Synchronize title/links

--- a/bundles/org.eclipse.platform.doc.user/tasks/tasks-105.htm
+++ b/bundles/org.eclipse.platform.doc.user/tasks/tasks-105.htm
@@ -43,7 +43,7 @@
 <a href="tasks-114.htm">Committing</a>
 </p>
 <p><img border="0" src="../images/ngrelr.gif" alt="Related references" width="159" height="27">
-<br><a href="../reference/ref-19cvs.htm">CVS preference pages</a>
+<br><a href="../reference/ref-19cvs.htm">CVS Preference pages</a>
 </p>
 
 <p>&nbsp;<br>
