--- a/bundles/org.eclipse.platform.doc.user/tasks/tasks-113b.htm
+++ b/bundles/org.eclipse.platform.doc.user/tasks/tasks-113b.htm
@@ -94,7 +94,7 @@
 <P>&nbsp;<img border="0" src="../images/ngrelc.gif" alt="Related concepts" width="159" height="27"><br>
 <a href="../concepts/concepts-26.htm">Team programming with CVS</a><br>
 <a href="../concepts/concepts-30.htm">Synchronizing with a CVS repository</a><br>
-<a href="../concepts/concepts-29.htm">Three-way comparisons</a>
+<a href="../concepts/concepts-29.htm">Three way comparisons</a>
 </P>
 
 <p><img border="0" src="../images/ngrelt.gif" alt="Related tasks" width="159" height="27"><br>
@@ -103,7 +103,7 @@
 <a href="tasks-114.htm">Committing</a><br>
 <a href="tasks-100b.htm">Merging from a branch</a><br>
 <a href="tasks-68.htm">Comparing resources</a><br>
-<a href="tasks-68dg.htm">Merging changes in the comparison editor</a>
+<a href="tasks-68dg.htm">Merging changes in the Compare editor</a>
 </p>
 
 <p><img border="0" src="../images/ngrelr.gif" alt="Related reference" width="159" height="27"><br>
