--- a/bundles/org.eclipse.platform.doc.user/tasks/tasks-114.htm
+++ b/bundles/org.eclipse.platform.doc.user/tasks/tasks-114.htm
@@ -90,7 +90,7 @@
 
 <p><img border="0" src="../images/ngrelr.gif" alt="Related references" width="159" height="27">
 <br><a href="../reference/ref-47.htm">CVS</a>
-<br><a href="../reference/ref-33.htm">CVS Synchronize view</a>
+<br><a href="../reference/ref-33.htm">Synchronize view</a>
 </p>
 
 <p>&nbsp;<br>
