--- a/bundles/org.eclipse.platform.doc.user/tasks/tasks-115.htm
+++ b/bundles/org.eclipse.platform.doc.user/tasks/tasks-115.htm
@@ -59,7 +59,7 @@ right side.</p>
 <a href="../concepts/concepts-26.htm">Team programming with CVS</a><br>
 <a href="../concepts/concepts-27b.htm">Branches</a><br>
 <a href="../concepts/concepts-30.htm">Synchronizing with a CVS repository</a><br>
-<a href="../concepts/concepts-29.htm">Three-way comparisons</a></p>
+<a href="../concepts/concepts-29.htm">Three way comparisons</a></p>
 
 <p><img border="0" src="../images/ngrelt.gif" alt="Related tasks" width="159" height="27"><br>
 <a href="tasks-114.htm">Committing</a><br>
@@ -74,7 +74,7 @@ right side.</p>
 
 <p><img border="0" src="../images/ngrelr.gif" alt="Related references" width="159" height="27">
 <br><a href="../reference/ref-47.htm">CVS</a>
-<br><a href="../reference/ref-33.htm">CVS Synchronize view</a>
+<br><a href="../reference/ref-33.htm">Synchronize view</a>
 </p>
 
 <p>&nbsp;<br>
