--- a/bundles/org.eclipse.platform.doc.user/tasks/tasks-1a.htm
+++ b/bundles/org.eclipse.platform.doc.user/tasks/tasks-1a.htm
@@ -29,8 +29,8 @@ See the Related tasks links for more details.
 <a href="tasks-9f.htm">Opening perspectives</a><br>
 <a href="tasks-24.htm">Changing where perspectives open</a><br>
 <a href="tasks-9k.htm">Configuring perspectives</a><br>
-<a href="tasks-9i.htm">Saving a user-defined perspective</a><br>
-<a href="tasks-9d.htm">Deleting a user-defined perspective</a><br>
+<a href="tasks-9i.htm">Saving a user defined perspective</a><br>
+<a href="tasks-9d.htm">Deleting a user defined perspective</a><br>
 <a href="tasks-9j.htm">Resetting perspectives</a>
 </p>
 
