--- a/bundles/org.eclipse.platform.doc.user/tasks/tasks-36a.htm
+++ b/bundles/org.eclipse.platform.doc.user/tasks/tasks-36a.htm
@@ -80,7 +80,7 @@ access):</p>
 <P>
 <img border="0" src="../images/ngrelt.gif" alt="Related tasks" width="159" height="27">
 <br><a href="tasks-34.htm">Installing new features with the update manager</a>
-<br><a href="tasks-36.htm">Updating Eclipse with the update manager</a>
+<br><a href="tasks-36.htm">Updating features with the update managerr</a>
 </P>
 
 <p>&nbsp;<br>
