--- a/bundles/org.eclipse.platform.doc.user/tasks/tasks-3e.htm
+++ b/bundles/org.eclipse.platform.doc.user/tasks/tasks-3e.htm
@@ -96,7 +96,7 @@ else in the view's title bar).
 <a href="tasks-3.htm">Opening views</a><br>
 <a href="tasks-9b.htm">Creating fast views</a><br>
 <a href="tasks-3i.htm">Maximizing a view or editor</a><br>
-<a href="tasks-9i.htm">Saving perspectives</a><br>
+<a href="tasks-9i.htm">Saving a user defined perspective</a><br>
 <a href="tasks-9j.htm">Resetting perspectives</a>
 </p>
 
