--- a/bundles/org.eclipse.platform.doc.user/tasks/tasks-55.htm
+++ b/bundles/org.eclipse.platform.doc.user/tasks/tasks-55.htm
@@ -45,7 +45,7 @@ the file system and dropping them in the Navigator view, or by copying and pasti
 </p>
 
 <p><img border="0" src="../images/ngrelr.gif" alt="Related reference" width="159" height="27"><br>
-<a href="../reference/ref-70.htm">Import Wizard</a>
+<a href="../reference/ref-70.htm">Import wizard</a>
 </p>
 
 <p><img border="0" src="../images/ngrelt.gif" alt="Related tasks" width="159" height="27"><br>
