--- a/bundles/org.eclipse.platform.doc.user/tasks/tasks-68bg.htm
+++ b/bundles/org.eclipse.platform.doc.user/tasks/tasks-68bg.htm
@@ -49,7 +49,7 @@ to quickly scroll to that difference.
   
 <p><img border="0" src="../images/ngrelc.gif" alt="Related concepts" width="159" height="27"><br>
 <a href="../concepts/concepts-30.htm">Synchronizing with a CVS repository</a><br>
-<a href="../concepts/concepts-29.htm">Three-way comparisons</a><br>
+<a href="../concepts/concepts-29.htm">Three way comparisons</a><br>
 <a href="../concepts/concepts-17a.htm">Local history</a>
 </p>
 
@@ -65,7 +65,7 @@ to quickly scroll to that difference.
 
 <p><img border="0" src="../images/ngrelr.gif" alt="Related references" width="159" height="27"><br>
 <a href="../reference/ref-25.htm">Compare editor</a><br>
-<a href="../reference/ref-33.htm">CVS Synchronize view</a>
+<a href="../reference/ref-33.htm">Synchronize view</a>
 </p>
 
 <p>&nbsp;<br>
