--- a/bundles/org.eclipse.platform.doc.user/tasks/tasks-77.htm
+++ b/bundles/org.eclipse.platform.doc.user/tasks/tasks-77.htm
@@ -32,8 +32,8 @@ of to-do items, or tasks.
 
 <p><img border="0" src="../images/ngrelt.gif" alt="Related tasks" width="159" height="27"><br>
 <a href="tasks-78.htm">Deleting tasks</a><br>
-<a href="tasks-77b.htm">Associating a task with an editable resource</a><br>
-<a href="tasks-79.htm">Filtering the task list</a><br>
+<a href="tasks-77b.htm">Associating a task with a resource</a><br>
+<a href="tasks-79.htm">Filtering the Task view</a><br>
 <a href="tasks-81b.htm">Creating a bookmark for an entire file</a><br>
 <a href="tasks-81.htm">Creating a bookmark within a file</a>
 </p>
