--- a/bundles/org.eclipse.platform.doc.user/tasks/tasks-9c.htm
+++ b/bundles/org.eclipse.platform.doc.user/tasks/tasks-9c.htm
@@ -104,7 +104,7 @@ file.&nbsp;&nbsp; </P>
 <a href="tasks-3.htm">Opening views</a><br>
 <a href="tasks-3e.htm">Docking views</a><br>
 <a href="tasks-3i.htm">Maximizing a view or editor</a><br>
-<a href="tasks-9i.htm">Saving perspectives</a><br>
+<a href="tasks-9i.htm">Saving a user defined perspective</a><br>
 <a href="tasks-9j.htm">Resetting perspectives</a>
 </p>
 
