--- a/bundles/org.eclipse.platform.doc.user/tasks/tasks-ant-running.htm
+++ b/bundles/org.eclipse.platform.doc.user/tasks/tasks-ant-running.htm
@@ -44,7 +44,7 @@ launch configuration dialog which is opened by clicking <b>Run &gt; External Too
 <a href="../tasks/tasks-exttools-running.htm">Running external tools</a><br>
 <a href="../tasks/tasks-ant-classpath.htm">Modifying the Ant classpath</a><br>
 <a href="../tasks/tasks-ant-version.htm">Using a different version of Ant</a><br>
-<a href="../tasks/tasks-ant-addtasksandtypes.htm">Adding new tasks and types</a><br>
+<a href="../tasks/tasks-ant-addtasksandtypes.htm">Adding new Ant tasks and types</a><br>
 </p>
 
 <p>&nbsp;<br>
