--- a/bundles/org.eclipse.platform.doc.user/tasks/taccess.htm
+++ b/bundles/org.eclipse.platform.doc.user/tasks/taccess.htm
@@ -69,7 +69,7 @@ Similarly, you can maximize the frame showing navigation, by double clicking its
 
 <p><img border="0" src="../images/ngrelt.gif" alt="Related tasks" width="159" height="27"><br>
 <a href="tsearch.htm">Searching online help</a><br>
-<a href="tf1help.htm">Accessing context-sensitive help</a>
+<a href="tf1help.htm">Accessing context sensitive help</a>
 </p>
 
 <p>&nbsp;<br>
