--- a/bundles/org.eclipse.platform.doc.user/tasks/tasks-101.htm
+++ b/bundles/org.eclipse.platform.doc.user/tasks/tasks-101.htm
@@ -39,7 +39,7 @@
 </ol>
 
 <P CLASS="Intro"><img border="0" src="../images/ngrelc.gif" alt="Related concepts" width="159" height="27"><br>
-<a href="../concepts/concepts-29.htm">Three-way comparisons</a><br>
+<a href="../concepts/concepts-29.htm">Three way comparisons</a><br>
 <a href="../concepts/concepts-30.htm">Synchronizing with a CVS repository</a>
 <p>
 
