--- a/bundles/org.eclipse.platform.doc.user/tasks/tasks-103.htm
+++ b/bundles/org.eclipse.platform.doc.user/tasks/tasks-103.htm
@@ -46,7 +46,7 @@
 <p><img border="0" src="../images/ngrelt.gif" alt="Related tasks" width="159" height="27"><br>
 <a href="tasks-96.htm">Checking out a project from a CVS repository</a><br>
 <a href="tasks-117.htm">Sharing a new project using CVS</a><br>
-<a href="tasks-119.htm">Viewing a File's Revision History</a><br>
+<a href="tasks-119.htm">Viewing a file's revision history</a><br>
 <a href="tasks-100a.htm">Branching</a><br>
 <a href="tasks-115.htm">Synchronizing with the repository</a>
 </p>
