--- a/bundles/org.eclipse.platform.doc.user/tasks/tasks-34a.htm
+++ b/bundles/org.eclipse.platform.doc.user/tasks/tasks-34a.htm
@@ -81,7 +81,7 @@
 <P>
 <img border="0" src="../images/ngrelt.gif" alt="Related tasks" width="159" height="27"><br>
 <a href="tasks-33.htm">Inspecting the current configuration</a><br>
-<a href="tasks-36.htm">Updating Eclipse with the update manager<br>
+<a href="tasks-36.htm">Updating features with the update manager<br>
 </a><a href="tasks-34.htm">Installing new features with the update manager</a><br>
 <a href="tasks-36a.htm">Searching for features</a><br>
 <a href="tasks-37.htm">Saving a configuration</a><br>
