--- a/bundles/org.eclipse.platform.doc.user/tasks/tasks-35.htm
+++ b/bundles/org.eclipse.platform.doc.user/tasks/tasks-35.htm
@@ -46,7 +46,7 @@
 </P>
 
 <P><img border="0" src="../images/ngrelt.gif" alt="Related tasks" width="159" height="27"><br>
-<a href="tasks-36.htm">Updating Eclipse with the update manager</a><br>
+<a href="tasks-36.htm">Updating features with the update manager</a><br>
 <a href="tasks-38.htm">Restoring a saved configuration</a>
 </P>
 
