--- a/bundles/org.eclipse.platform.doc.user/tasks/tasks-53.htm
+++ b/bundles/org.eclipse.platform.doc.user/tasks/tasks-53.htm
@@ -30,7 +30,7 @@
 </P>
 
 <p><img border="0" src="../images/ngrelt.gif" alt="Related tasks" width="159" height="27"><br>
-<a href="tasks-55.htm">Importing resources from a directory in the file system</a><br>
+<a href="tasks-55.htm">Importing resources from the file system</a><br>
 <a href="tasks-55bg.htm">Importing resources from a ZIP File</a><br>
 <a href="tasks-57.htm">Exporting</a>
 </p>
