--- a/bundles/org.eclipse.platform.doc.user/tasks/tasks-55bg.htm
+++ b/bundles/org.eclipse.platform.doc.user/tasks/tasks-55bg.htm
@@ -42,12 +42,12 @@
 </p>
 
 <p><img border="0" src="../images/ngrelr.gif" alt="Related reference" width="159" height="27"><br>
-<a href="../reference/ref-70.htm">Import Wizard</a>
+<a href="../reference/ref-70.htm">Import wizard</a>
 </p>
 
 <p><img border="0" src="../images/ngrelt.gif" alt="Related tasks" width="159" height="27"><br>
 <a href="tasks-importproject.htm">Importing existing projects</a><br>
-<a href="tasks-55.htm">Importing resources from a directory in the file system</a><br>
+<a href="tasks-55.htm">Importing resources from the file system</a><br>
 <a href="tasks-57.htm">Exporting</a><br>
 </p>
 
