--- a/bundles/org.eclipse.platform.doc.user/tasks/tasks-59.htm
+++ b/bundles/org.eclipse.platform.doc.user/tasks/tasks-59.htm
@@ -37,7 +37,7 @@ by copy and paste.
 </p>
 
 <p><img border="0" src="../images/ngrelt.gif" alt="Related tasks" width="159" height="27"><br>
-<a href="tasks-53.htm">Importing resources into the Workbench</a><br>
+<a href="tasks-53.htm">Importing</a><br>
 <a href="tasks-59ag.htm">Exporting resources to a ZIP File</a><br>
 </p>
 
