--- a/bundles/org.eclipse.platform.doc.user/tasks/tasks-68.htm
+++ b/bundles/org.eclipse.platform.doc.user/tasks/tasks-68.htm
@@ -61,12 +61,12 @@ members and changing the default font.</p>
 
 <p><img border="0" src="../images/ngrelc.gif" alt="Related concepts" width="159" height="27"><br>
 <a href="../concepts/concepts-30.htm">Synchronizing with a CVS repository</a><br>
-<a href="../concepts/concepts-29.htm">Three-way comparisons</a><br>
+<a href="../concepts/concepts-29.htm">Three way comparisons</a><br>
 <a href="../concepts/concepts-17a.htm">Local history</a></p>
 
 <p><img border="0" src="../images/ngrelt.gif" alt="Related tasks" width="159" height="27"><br>
 <a href="tasks-115.htm">Synchronizing with the repository</a><br>
-<a href="tasks-68dg.htm">Merging changes in the compare editor</a><br>
+<a href="tasks-68dg.htm">Merging changes in the Compare editor</a><br>
 <a href="tasks-113b.htm">Resolving conflicts</a><br>
 <a href="tasks-68b.htm">Setting preferences for comparing files</a><br>
 <a href="tasks-101.htm">Comparing resources with repository versions</a><br>
