--- a/bundles/org.eclipse.platform.doc.user/tasks/tasks-68b.htm
+++ b/bundles/org.eclipse.platform.doc.user/tasks/tasks-68b.htm
@@ -134,7 +134,7 @@ Off</P>
 </TABLE>
 
 <p><img border="0" src="../images/ngrelc.gif" alt="Related concepts" width="159" height="27"><br>
-<a href="../concepts/concepts-29.htm">Three-way comparisons</a>
+<a href="../concepts/concepts-29.htm">Three way comparisons</a>
 </p>
 
 <p><img border="0" src="../images/ngrelt.gif" alt="Related tasks" width="159" height="27"><br>
