--- a/bundles/org.eclipse.platform.doc.user/tasks/tasks-68dg.htm
+++ b/bundles/org.eclipse.platform.doc.user/tasks/tasks-68dg.htm
@@ -43,7 +43,7 @@ actions completely replace the contents of one resource with the other resource.
 </p>
 
 <P><img border="0" src="../images/ngrelc.gif" alt="Related concepts" width="159" height="27"><br>
-<a href="../concepts/concepts-29.htm">Three-way comparisons</a><br>
+<a href="../concepts/concepts-29.htm">Three way comparisons</a><br>
 <a href="../concepts/concepts-30.htm">Synchronizing with a CVS repository</a>
 </P>
 
@@ -57,7 +57,7 @@ actions completely replace the contents of one resource with the other resource.
 
 <p><img border="0" src="../images/ngrelr.gif" alt="Related references" width="159" height="27">
 <br><a href="../reference/ref-25.htm">Compare editor</a>
-<br><a href="../reference/ref-33.htm">CVS Synchronize view</a>
+<br><a href="../reference/ref-33.htm">Synchronize view</a>
 </p>
 
 <p>&nbsp;<br>
