--- a/bundles/org.eclipse.platform.doc.user/tasks/tasks-81.htm
+++ b/bundles/org.eclipse.platform.doc.user/tasks/tasks-81.htm
@@ -38,7 +38,7 @@ double-clicking the bookmark in the Bookmarks view.
 <a href="tasks-81b.htm">Creating a bookmark for an entire file</a><br>
 <a href="tasks-82.htm">Deleting a Bookmark</a><br>
 <a href="tasks-77.htm">Adding line items in the Tasks view</a><br>
-<a href="tasks-77b.htm">Associating a task with an editable resource</a>
+<a href="tasks-77b.htm">Associating a task with a resource</a>
 </p>
 
 <p>&nbsp;<br>
