--- a/bundles/org.eclipse.platform.doc.user/tasks/tasks-81b.htm
+++ b/bundles/org.eclipse.platform.doc.user/tasks/tasks-81b.htm
@@ -41,7 +41,7 @@ source code or within a file. See the list of related topics below.
 <a href="tasks-81.htm">Creating a bookmark within a file</a><br>
 <a href="tasks-82.htm">Deleting a Bookmark</a><br>
 <a href="tasks-77.htm">Adding line items in the Tasks view</a><br>
-<a href="tasks-77b.htm">Associating a task with an editable resource</a>
+<a href="tasks-77b.htm">Associating a task with a resource</a>
 </p>
 
 <p>&nbsp;<br>
