--- a/bundles/org.eclipse.platform.doc.user/tasks/tasks-84.htm
+++ b/bundles/org.eclipse.platform.doc.user/tasks/tasks-84.htm
@@ -43,7 +43,7 @@ files in the Workbench. To find all files that contain a particular string of ch
 </p>
 
 <p><img border="0" src="../images/ngrelt.gif" alt="Related tasks" width="159" height="27"><br>
-<a href="../tasks/tasks-84b.htm">Searching for Files</a>
+<a href="../tasks/tasks-84b.htm">Searching for files</a>
 </p>
 
 <p><img border="0" src="../images/ngrelr.gif" alt="Related reference" width="159" height="27"><br>
