--- a/bundles/org.eclipse.platform.doc.user/tasks/tasks-9i.htm
+++ b/bundles/org.eclipse.platform.doc.user/tasks/tasks-9i.htm
@@ -30,7 +30,7 @@ moving (docking) views, you can save your changes for future use.
 
 <p><img border="0" src="../images/ngrelt.gif" alt="Related tasks" width="159" height="27"><br>
 <a href="tasks-9j.htm">Resetting perspectives</a><br>
-<a href="tasks-9d.htm">Deleting a user-defined perspective</a><br>
+<a href="tasks-9d.htm">Deleting a user defined perspective</a><br>
 <a href="tasks-3.htm">Opening views</a><br>
 <a href="tasks-3e.htm">Moving and docking views</a>
 </p>
