--- a/bundles/org.eclipse.platform.doc.user/tasks/tasks-9k.htm
+++ b/bundles/org.eclipse.platform.doc.user/tasks/tasks-9k.htm
@@ -37,7 +37,7 @@ can also control several other key aspects of a perspective. These include:
 <p><img border="0" src="../images/ngrelt.gif" alt="Related tasks" width="159" height="27"><br>
 <a href="tasks-24.htm">Changing where perspectives open</a><br>
 <a href="tasks-31.htm">Specifying the default perspective</a><br>
-<a href="tasks-9i.htm">Saving a user-defined perspective</a>
+<a href="tasks-9i.htm">Saving a user defined perspective</a>
 </p>
 
 <p>&nbsp;<br>
