--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-175.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-175.htm
@@ -16,7 +16,7 @@
     To use the Quick Fix feature: 
 <ul>
       
-  <li> You need to have the <strong>Window &gt; Preference &gt; Java &gt; Editor 
+  <li> You need to have the <strong>Window &gt; Preferences &gt; Java &gt; Editor 
     &gt; Annotations &gt; Analyze annotations while typing</strong> checkbox selected. 
   </li>
       <li>
@@ -37,7 +37,7 @@
         Select an entry form the list and press <kbd>Enter</kbd>.
       </li>
     </ul>
-    If you have the <strong>Window &gt; Preference &gt; Java &gt; Editor &gt; 
+    If you have the <strong>Window &gt; Preferences &gt; Java &gt; Editor &gt; 
 Annotations &gt; Indicate annotations solvable with Quick Fix in vertical 
 ruler</strong> checkbox selected, then light bulb icons appear on the left-hand 
 side vertical ruler to indicate Quick Fix'able problems. You can then click on 
