--- a/bundles/org.eclipse.platform.doc.user/tasks/tasks-81.htm
+++ b/bundles/org.eclipse.platform.doc.user/tasks/tasks-81.htm
@@ -25,10 +25,8 @@ edit so that you can quickly reopen those files from the Bookmarks view.
 	(<b>Window &gt; Show View &gt; Bookmarks</b>.)</li>
 </ol>
 
-<p CLASS="Head">You can reopen the file for editing at any time by
-double-clicking the bookmark in the Bookmarks view.
-</p>
-
+<p CLASS="Head">You can reopen the file for editing at any time by double-clicking 
+  the bookmark in the Bookmarks view. </p>
 <p><img border="0" src="../images/ngrelc.gif" alt="Related concepts" width="159" height="27"><br>
 <a href="../concepts/cbookmrk.htm">Bookmarks</a><br>
 <a href="../concepts/ctskview.htm">Tasks view</a>
