--- a/bundles/org.eclipse.platform.doc.user/tips/platform_tips.html
+++ b/bundles/org.eclipse.platform.doc.user/tips/platform_tips.html
@@ -261,7 +261,7 @@ productivity.</p>
     <td width="80%" valign="top" align="left">Use the Properties view (<b>Window
       &gt; Show View &gt; Properties</b>) when viewing the properties for many
       resources. Using this view is faster than opening the Properties dialog for each resource.
-    <p><img border="0" src="images/props-view.jpg" alt="Resource properties dialog"></p></td>
+    <p><img border="0" src="images/props-view.gif" alt="Resource properties dialog"></p></td>
   </tr>
   <tr>
     <td width="20%" valign="top" align="right"><b>Quickly find a resource</b></td>
