--- a/bundles/org.eclipse.platform.doc.user/tips/platform_tips.html
+++ b/bundles/org.eclipse.platform.doc.user/tips/platform_tips.html
@@ -70,7 +70,7 @@ productivity.</p>
       sequence to trigger that command. Assigning new key bindings, and viewing
       existing bindings, is done from the <b>Workbench &gt;
       Keys</b> preference page.
-      <p><img border="0" src="images/key-bindings.gif" alt="Key bindings preference dialog"></p>
+      <p><img src="images/key-bindings.gif" alt="Key bindings preference dialog" width="452" height="388" border="0"></p>
     </td>
   </tr>
   <tr>
@@ -87,7 +87,7 @@ productivity.</p>
       work area.  Grab an editor tab and drag it to the edge of the editor work
       area.  The arrow dock icons 
     (e.g., <img align="texttop" border="0" src="../images/drop_left_source.gif"  alt="Left arrow icon">) indicate which way the editor work area will split.
-    <p><img border="0" src="images/editor-tiles.gif" alt="Tiled editor work area"></p></td>
+      <p><img src="images/editor-tiles.gif" alt="Tiled editor work area" width="405" height="393" border="0"></p></td>
   </tr>
   <tr>
     <td width="20%" valign="top" align="right"><b>Now where was I?</b></td>
@@ -130,7 +130,7 @@ productivity.</p>
       Navigator view. Toggling the <b>Link with
       Editor</b> button in the Navigator view toolbar ties the view
       to always show the current file being edited.
-      <p align="center"><img border="0" src="images/link-with-editor.gif" alt="Package explorer linked with editor"></p>
+      <p align="center"><img src="images/link-with-editor.gif" alt="Package explorer linked with editor" width="403" height="147" border="0"></p>
     </td>
   </tr>
   <tr>
@@ -169,7 +169,7 @@ productivity.</p>
     <td width="20%" valign="top" align="right"><b>Collapsing all open items</b></td>
     <td width="80%" valign="top" align="left">Use the <b>Collapse All</b> button on the
       toolbar of the Navigator view (and similar views) to collapse all expanded project and folder items.
-    <p align="center"><img border="0" src="images/collapse-all.gif" alt="Collapse all button on navigator toolbar" align="left"></p></td>
+      <p align="center"><img src="images/collapse-all.gif" alt="Collapse all button on navigator toolbar" width="270" height="58" border="0" align="left"></p></td>
   </tr>
   <tr>
     <td width="20%" valign="top" align="right"><b>Open editors with a single click</b></td>
@@ -218,7 +218,7 @@ productivity.</p>
       automatically</b> preference is active (found on the <b> Workbench &gt; Editors</b> preference page), you can stop an editor from being
       closed by using the 
     <b>Pin Editor</b>  button which appears in the workbench toolbar.
-    <p><img border="0" src="images/pin-editor.gif" alt="Pin editor button"></p></td>
+      <p><img src="images/pin-editor.gif" alt="Pin editor button" width="89" height="52" border="0"></p></td>
   </tr>
   <tr>
     <td width="20%" valign="top" align="right"><b>Importing an existing project</b></td>
@@ -248,7 +248,7 @@ productivity.</p>
       reveals a number of ways to quickly navigate between the various views, editors, perspectives, and menus in the workbench.  
     These commands have keyword accelerators such as <b>Ctrl+F6</b> for switching between editors, <b>Ctrl+F7</b> for switching between views, <b>Ctrl+F8</b> for switching
       between perspectives, and <b>F12</b> for activating the editor.
-    <p><img border="0" src="images/keyboard-shortcut.gif" alt="Keyboard shortcuts menu"></p></td>
+      <p><img src="images/keyboard-shortcut.gif" alt="Keyboard shortcuts menu" width="458" height="199" border="0"></p></td>
   </tr>
   <tr>
     <td width="20%" valign="top" align="right"><b>Maximizing a view or editor</b></td>
@@ -261,7 +261,7 @@ productivity.</p>
     <td width="80%" valign="top" align="left">Use the Properties view (<b>Window
       &gt; Show View &gt; Properties</b>) when viewing the properties for many
       resources. Using this view is faster than opening the Properties dialog for each resource.
-    <p><img border="0" src="images/props-view.gif" alt="Resource properties dialog"></p></td>
+      <p><img src="images/props-view.gif" alt="Resource properties dialog" width="403" height="206" border="0"></p></td>
   </tr>
   <tr>
     <td width="20%" valign="top" align="right"><b>Quickly find a resource</b></td>
@@ -293,7 +293,7 @@ productivity.</p>
     <td width="80%" valign="top" align="left">You can customize which items
       appear on the main toolbar and menu bar using the <b>Window &gt; Customize Perspective</b> 
       command.
-      <p><img border="0" src="images/perspective-other.gif" alt="Customizing toolbar and menu bar"></p>
+      <p><img src="images/perspective-other.gif" alt="Customizing toolbar and menu bar" width="455" height="460" border="0"></p>
     </td>
   </tr>
   <tr>
@@ -312,7 +312,7 @@ productivity.</p>
       the file system. You can define a path variable at the time you 
     create a linked resource, or via the <b> Workbench 
     &gt; Linked Resources</b> preference page.
-    <p align="center"><img border="0" src="images/path-vars.gif" alt="Path variables dialog" align="left"></p></td>
+      <p align="center"><img src="images/path-vars.gif" alt="Path variables dialog" width="408" height="221" border="0" align="left"></p></td>
   </tr>
   
   <tr>
@@ -420,7 +420,7 @@ productivity.</p>
     <td width="80%" valign="top" align="left">There is now an option to create 
       a working set for projects imported into the workspace via <b>Import &gt; 
       Team Project Set</b>. This works for all types of repositories.
-      <p><img border="0" src="images/team-project-set.gif" width="324" height="183" alt="Team project set import dialog"></p></td>
+      <p><img border="0" src="images/team-project-set.gif" width="470" height="220" alt="Team project set import dialog"></p></td>
   </tr>
   <tr>
     <td width="20%" valign="top" align="right"><b>CVS now supports working sets</b></td>
@@ -536,9 +536,9 @@ productivity.</p>
     	<p>
     	You can show the common ancestor by toggling the <strong>Show Ancestor Pane</strong>
     	button in the compare viewer's local toolbar.
-    	<p>
-       	<img border="0" src="images/compare-showancestor.gif" alt="Show Ancestor Pane button in compare viewer">
-    	<p>
+    	
+      <p> <img src="images/compare-showancestor.gif" alt="Show Ancestor Pane button in compare viewer" width="367" height="175" border="0"> 
+      <p>
     	If you always want to have the ancestor pane open automatically for conflicts, 
     	you can check the option <strong>Initally show ancestor pane</strong> on the
     	Text Compare tab of the Compare/Patch preference page.
