--- a/bundles/org.eclipse.platform.doc.user/concepts/concepts-antsupport.htm
+++ b/bundles/org.eclipse.platform.doc.user/concepts/concepts-antsupport.htm
@@ -43,7 +43,8 @@ runtime preference page, under <b>Window &gt; Preferences &gt; Ant &gt; Runtime<
 <p><img border="0" src="../images/ngrelr.gif" alt="Related reference" width="159" height="27"><br>
 <a href="../reference/ref-antprefs.htm">Ant preferences</a><br>
 <a href="../reference/ref-antruntimeprefs.htm">Ant runtime preferences</a><br>
-<a href="../reference/ref-antview.htm">Ant view</a>
+<a href="../reference/ref-antview.htm">Ant view</a><br>
+<a href="../reference/ref-anticons.htm">External Tools and Ant icons</a>
 </p>
 <p>
 <a href="../hglegal2003.htm"><img src="../images/ngibmcpy2003.gif" alt="Copyright IBM Corporation and others 2000, 2003. All Rights Reserved." border="0" width="324" height="14"></a>
