--- a/bundles/org.eclipse.platform.doc.user/concepts/concepts-exttools.htm
+++ b/bundles/org.eclipse.platform.doc.user/concepts/concepts-exttools.htm
@@ -215,7 +215,8 @@ selected.
 <br><a href="concepts-antsupport.htm">Ant support</a>
 <br><a href="concepts-22.htm">Builds</a>
 <p><img src="../images/ngrelr.gif" alt="Related reference" BORDER=0 width="159" height="27">
-<br><a href="../reference/ref-exttoolsprefs.htm">External Tools preferences</a>
+<br><a href="../reference/ref-exttoolsprefs.htm">External Tools preferences</a><br>
+<a href="../reference/ref-anticons.htm">External Tools and Ant icons</a>
 <p><img src="../images/ngrelt.gif" alt="Related tasks" BORDER=0 width="159" height="27">
 <br><a href="../tasks/tasks-exttools-running.htm">Running external tools</a>
 <br><a href="../tasks/tasks-ant-running.htm">Running Ant build files</a>
