--- a/bundles/org.eclipse.platform.doc.user/concepts/concepts-antsupport.htm
+++ b/bundles/org.eclipse.platform.doc.user/concepts/concepts-antsupport.htm
@@ -42,6 +42,7 @@ runtime preference page, under <b>Window &gt; Preferences &gt; Ant &gt; Runtime<
 </p>
 <p><img border="0" src="../images/ngrelr.gif" alt="Related reference" width="159" height="27"><br>
 <a href="../reference/ref-antprefs.htm">Ant preferences</a><br>
+<a href="../reference/ref-anteditorprefs.htm">Ant editor preferences</a><br>
 <a href="../reference/ref-antruntimeprefs.htm">Ant runtime preferences</a><br>
 <a href="../reference/ref-antview.htm">Ant view</a><br>
 <a href="../reference/ref-anticons.htm">External Tools and Ant icons</a>
