Fix image widths to be < 466

--- a/bundles/org.eclipse.jdt.doc.user/tips/jdt_tips.html
+++ b/bundles/org.eclipse.jdt.doc.user/tips/jdt_tips.html
@@ -656,7 +656,7 @@
 </td>
 		</tr>
 	</tbody>
-	</tbody>
+	
 </table>
 <h3>Debugging</h3>
 <table border="1" cellpadding="10" cellspacing="0" width="600">
@@ -668,7 +668,8 @@
 			Application launch configuration to cause your program to stop at the
 			first executable line of the main method when you run it under debug
 			mode.</p>
-			<p><img src="images/stop-in-main.gif" width=478 height=202 alt="Main tab for a Java Appplication launch configuration"></p>
+			
+      <p><img src="images/stop-in-main.gif" width="426" height="210"></p>
 			</td>
 		</tr>
 		<tr>
@@ -701,7 +702,8 @@
 			values of Java primitives and Strings in the <b>Variables</b> view.
 			From the variable's context menu, choose <b>Change Variable Value</b>.
 			</p>
-			<p><img src="images/change-variable-value.gif" width=483 height=275 alt="Change variable value dialog"></p>
+			
+      <p><img src="images/change-variable-value.gif" width="401" height="244"></p>
 			</td>
 		</tr>
 		<tr>
@@ -740,7 +742,8 @@
 			series of chained or nested method calls. Simply highlight the method
 			you wish to step into and select <b>Step into Selection</b> from the
 			Java editor context menu.</p>
-			<p><img src="../whatsNew/images/step-into-selection.gif" width=703 height=168 alt="Selected method name in Java editor"></p>
+			
+      <p><img src="../whatsNew/images/step-into-selection.gif" width="404" height="147"></p>
 			</td>
 		</tr>
 		<tr>
@@ -809,14 +812,15 @@
 				width="17" height="19" alt="New scrapbook toolbar button">on the
 			workbench toolbar. Enter whatever code you wish to execute, then
 			select it. There are three ways to execute your code:</p>
-			<ul>
-				<li>Execute the selected code and place the returned result in the
-				Expressions view</li>
-				<li>Execute the selected code and place the String result right in
-				the scrapbook page<br>
-				<img src="images/scrapbook-display.gif" width=544 height=139 alt="Scrapbook editor displays the textual result in the editor"></li>
-				<li>Execute the selected code (and ignore any returned result)</li>
-			</ul>
+			
+      <ul>
+        <li>Execute the selected code and place the returned result in the Expressions 
+          view</li>
+        <li>Execute the selected code and place the String result right in the 
+          scrapbook page<br>
+          <img src="images/scrapbook-display.gif" width="446" height="161"> </li>
+        <li>Execute the selected code (and ignore any returned result)</li>
+      </ul>
 			<p>These actions are in the workbench toolbar and also in the
 			scrapbook page's context menu.</p>
 			</td>
@@ -840,7 +844,8 @@
 			making the configuration a 'favorite'. In the Debug&gt;Launch History
 			preference page, you can establish favorites by launch type (Run,
 			Debug, External Tools).</p>
-			<p><img src="images/favorites-prefs.gif" width=541 height=528 alt="Launch history preference page"></p>
+			
+      <p><img src="images/favorites-prefs.gif" width="355" height="427"></p>
 			<p>Now, the Debug drop-down menu shows the specified configurations
 			as favorites, with the rest of the configurations in history order.</p>
 			<p><img src="images/debug-drop-down.gif" width=191 height=206 alt="Debug drop-down menu on workbench toolbar"></p>
@@ -908,11 +913,12 @@
 		</tr>
 		<tr>
 			<td valign="top" align="right"><b>Command line details</b></td>
-			<td valign="top" align="left">You can always see the exact command
-			line used to launch a program in run or debug mode by selecting <b>Properties</b>
-			from the context menu of a process or debug target, even if the
-			launch has terminated.
-			<p><img src="images/process-info.gif" width=496 height=254 alt="Process properties dialog"></p>
+			
+    <td valign="top" align="left">You can always see the exact command line used 
+      to launch a program in run or debug mode by selecting <b>Properties</b> 
+      from the context menu of a process or debug target, even if the launch has 
+      terminated. 
+      <p><img src="images/process-info.gif" width="459" height="210"></p>
 			</td>
 		</tr>
 		<tr>
