*** empty log message ***

--- a/bundles/org.eclipse.jdt.doc.user/tips/jdt_tips.html
+++ b/bundles/org.eclipse.jdt.doc.user/tips/jdt_tips.html
@@ -845,7 +845,7 @@
 			preference page, you can establish favorites by launch type (Run,
 			Debug, External Tools).</p>
 			
-      <p><img src="images/favorites-prefs.gif" width="355" height="427"></p>
+      <p><img src="images/favorites-prefs.gif" alt = "Launch history preference page" width="355" height="427"></p>
 			<p>Now, the Debug drop-down menu shows the specified configurations
 			as favorites, with the rest of the configurations in history order.</p>
 			<p><img src="images/debug-drop-down.gif" width=191 height=206 alt="Debug drop-down menu on workbench toolbar"></p>
@@ -918,7 +918,7 @@
       to launch a program in run or debug mode by selecting <b>Properties</b> 
       from the context menu of a process or debug target, even if the launch has 
       terminated. 
-      <p><img src="images/process-info.gif" width="459" height="210"></p>
+      <p><img src="images/process-info.gif" alt = "Command line details" width="459" height="210"></p>
 			</td>
 		</tr>
 		<tr>
