*** empty log message ***

--- a/bundles/org.eclipse.jdt.doc.user/tips/jdt_tips.html
+++ b/bundles/org.eclipse.jdt.doc.user/tips/jdt_tips.html
@@ -669,7 +669,7 @@
 			first executable line of the main method when you run it under debug
 			mode.</p>
 			
-      <p><img src="images/stop-in-main.gif" width="426" height="210"></p>
+      <p><img src="images/stop-in-main.gif" alt="Main tab with Stop in Main option selected" width="426" height="210"></p>
 			</td>
 		</tr>
 		<tr>
@@ -703,7 +703,7 @@
 			From the variable's context menu, choose <b>Change Variable Value</b>.
 			</p>
 			
-      <p><img src="images/change-variable-value.gif" width="401" height="244"></p>
+      <p><img src="images/change-variable-value.gif" alt="Change variable value dialog" width="401" height="244"></p>
 			</td>
 		</tr>
 		<tr>
@@ -743,7 +743,7 @@
 			you wish to step into and select <b>Step into Selection</b> from the
 			Java editor context menu.</p>
 			
-      <p><img src="../whatsNew/images/step-into-selection.gif" width="404" height="147"></p>
+      <p><img src="../whatsNew/images/step-into-selection.gif" alt="Stepping into selection" width="404" height="147"></p>
 			</td>
 		</tr>
 		<tr>
@@ -818,7 +818,7 @@
           view</li>
         <li>Execute the selected code and place the String result right in the 
           scrapbook page<br>
-          <img src="images/scrapbook-display.gif" width="446" height="161"> </li>
+          <img src="images/scrapbook-display.gif" alt="Scrapbook page displaying result" width="446" height="161"> </li>
         <li>Execute the selected code (and ignore any returned result)</li>
       </ul>
 			<p>These actions are in the workbench toolbar and also in the
@@ -845,7 +845,7 @@
 			preference page, you can establish favorites by launch type (Run,
 			Debug, External Tools).</p>
 			
-      <p><img src="images/favorites-prefs.gif" alt = "Launch history preference page" width="355" height="427"></p>
+      <p><img src="images/favorites-prefs.gif" alt="Launch history preference page" width="355" height="427"></p>
 			<p>Now, the Debug drop-down menu shows the specified configurations
 			as favorites, with the rest of the configurations in history order.</p>
 			<p><img src="images/debug-drop-down.gif" width=191 height=206 alt="Debug drop-down menu on workbench toolbar"></p>
