--- a/bundles/org.eclipse.jdt.doc.user/whatsNew/jdt_whatsnew.html
+++ b/bundles/org.eclipse.jdt.doc.user/whatsNew/jdt_whatsnew.html
@@ -328,7 +328,7 @@
         a series of chained or nested method calls. Simply highlight the method 
         you wish to step into and select <b>Step into Selection</b> from the Java 
         editor context menu.</p>
-      <p><img src="images/step-into-selection.gif" width="404" height="147"></p>
+      <p><img src="images/step-into-selection.gif" alt="Stepping into selection" width="404" height="147"></p>
     </td>
   </tr>
   <tr> 
