Fix trademarks; remove PR list; change to final

--- a/maps/org.eclipse.releng/readmes/readme_eclipse.html
+++ b/maps/org.eclipse.releng/readmes/readme_eclipse.html
@@ -11,8 +11,8 @@
 <body>
 
 <h1>Eclipse Project Release Notes</h1>
-<p><b>DRAFT </b>Pre-release 2.1.0<br>
-Last revised March 26, 2003</p>
+<p>Release 2.1.0<br>
+ March 26, 2003</p>
 <p align="left"><strong>This software is OSI Certified Open Source Software.<br>
 OSI Certified is a certification mark of the Open Source Initiative.&nbsp;</strong></p>
 <blockquote>
@@ -21,13 +21,12 @@ OSI Certified is a certification mark of the Open Source Initiative.&nbsp;</stro
   <a href="#Compatibility with Previous Release">2. Compatibility with Previous Releases</a><br>
   <a href="#Upgrading">3. Upgrading a Workspace from a Previous Release</a><br>
   <a href="#Known Issues">4. Known Issues</a><br>
-  <a href="#Defects fixed">5. Defects Fixed</a><br>
-  <a href="#Interoperability with Previous Releases">6. Interoperability with Previous Releases</a><br>
+  <a href="#Interoperability with Previous Releases">5. Interoperability with Previous Releases</a><br>
   </p>
 </blockquote>
 <h2>1. <a name="Target Operating Environments"></a> Target Operating
 Environments</h2>
-<p>Most of the Eclipse SDK is &quot;pure&quot; Java&trade; code and has no direct
+<p>Most of the Eclipse SDK is &quot;pure&quot; Java code and has no direct
 dependence on the underlying operating system. The chief dependence is therefore
 on the Java 2 Platform itself. Like the 2.0 release, the 2.1 release of the
 Eclipse Project is written and compiled against version 1.3 of the Java 2
@@ -43,8 +42,8 @@ Platform implementations:</p>
       <td width="73%"><b>Java 2 Platforms</b></td>
     </tr>
     <tr>
-      <td width="21%" rowspan="4">Microsoft&reg;<br>
-        Windows&reg;</td>
+      <td width="21%" rowspan="4">Microsoft<br>
+        Windows</td>
       <td width="18%" rowspan="4">Intel x86</td>
       <td width="73%">Sun Java 2 SDK, Standard Edition, version 1.3.1_06 for
         Microsoft Windows</td>
@@ -92,13 +91,13 @@ Platform implementations:</p>
         version 1.3.1 for hp9000 PA-RISC</span></td>
     </tr>
     <tr>
-      <td width="21%">IBM&reg; AIX</td>
+      <td width="21%">IBM AIX</td>
       <td width="18%">PowerPC</td>
       <td width="73%">IBM Developer Kit for AIX, Java 2 Technology Edition,
         version 1.3.1</td>
     </tr>
     <tr>
-      <td width="21%" rowspan="2">Apple&reg; Mac&reg; OS</td>
+      <td width="21%" rowspan="2">Apple Mac OS</td>
       <td width="18%" rowspan="2">PowerPC</td>
       <td width="73%">Java 2 Platform, Standard Edition, version 1.3.1 for Mac
         OS X</td>
@@ -108,8 +107,8 @@ Platform implementations:</p>
         OS X</td>
     </tr>
     <tr>
-      <td width="21%"><span class="title">QNX</span>&reg;<span class="title">
-        Neutrino</span>&reg;<span class="title"> RTOS</span></td>
+      <td width="21%"><span class="title">QNX
+        Neutrino RTOS</span></td>
       <td width="18%">Intel x86</td>
       <td width="73%">IBM J9 VM for QNX, version 2.0</td>
     </tr>
@@ -211,7 +210,7 @@ been tested, but is not product quality in this release.</p>
       <td width="19%" height="16"><i>Early access</i></td>
     </tr>
     <tr>
-      <td width="11%" height="16">Photon&reg;</td>
+      <td width="11%" height="16">Photon</td>
       <td width="28%" height="16">IBM J9 VM for QNX</td>
       <td width="42%" height="16">QNX Neutrino RTOS 6.2.1&nbsp;</td>
       <td width="19%" height="16">Primary</td>
@@ -1506,26 +1505,7 @@ works. (bug <a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=18108">18108</
 when trying to obtain the timestamp of a newly uploaded file. This causes a
 &quot;file does not exist&quot; error. The workaround is to <b>Synchronize</b>
 again and continue. (bug <a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=19715">19715</a>)</p>
-<h2>5. <a name="Defects fixed"></a>Defects fixed</h2>
-<h3>4.1 Release 2.1 over 2.0</h3>
-<p>Release 2.1 improves on release 2.0. The various features and plug-in in this
-release have version id &quot;2.1.0&quot;. The only exceptions are the following
-plug-ins: <code>org.apache.ant</code> (version id &quot;1.5.2&quot;), <code>org.apache.lucene</code>
-(&quot;1.2.1&quot;), <code>org.apache.xerces</code> (version &quot;4.0.7&quot;),
-<code>org.eclipse.tomcat</code> (version &quot;4.0.7&quot;), and <code>org.junit</code>
-(version &quot;3.8.1&quot;).</p>
-<p>Release 2.1 fixes the following defects present in release 2.0. (Note that
-this list includes defects fixed in the 2.0.* service releases up to and
-including 2.0.3.)</p>
-<table cellspacing="0" cellpadding="4" width="100%">
-  <tbody>
-    <tr align="left">
-      <th><a href="http://dev.eclipse.org/bugs/buglist.cgi?resolution=FIXED&amp;email1=&amp;emailtype1=substring&amp;emailassigned_to1=1&amp;email2=&amp;emailtype2=substring&amp;emailreporter2=1&amp;bugidtype=include&amp;bug_id=&amp;changedin=&amp;votes=&amp;chfieldfrom=&amp;chfieldto=Now&amp;chfieldvalue=&amp;target_milestone=2.0.1&amp;short_desc=&amp;short_desc_type=allwordssubstr&amp;long_desc=&amp;long_desc_type=allwordssubstr&amp;keywords=&amp;keywords_type=anywords&amp;field0-0-0=noop&amp;type0-0-0=noop&amp;value0-0-0=&amp;namedcmd=2.0.1&amp;newqueryname=2.0.1+fixed&amp;tofooter=1&amp;order=bugs.bug_id">ID</a>
-      <th><a href="http://dev.eclipse.org/bugs/buglist.cgi?resolution=FIXED&amp;email1=&amp;emailtype1=substring&amp;emailassigned_to1=1&amp;email2=&amp;emailtype2=substring&amp;emailreporter2=1&amp;bugidtype=include&amp;bug_id=&amp;changedin=&amp;votes=&amp;chfieldfrom=&amp;chfieldto=Now&amp;chfieldvalue=&amp;target_milestone=2.0.1&amp;short_desc=&amp;short_desc_type=allwordssubstr&amp;long_desc=&amp;long_desc_type=allwordssubstr&amp;keywords=&amp;keywords_type=anywords&amp;field0-0-0=noop&amp;type0-0-0=noop&amp;value0-0-0=&amp;namedcmd=2.0.1&amp;newqueryname=2.0.1+fixed&amp;tofooter=1&amp;order=bugs.short_desc%2C%20bugs.bug_id">Summary</a></th>
-  </tbody>
-</table>
-<p><i>[TBD]</i></p>
-<h2>6. <a name="Interoperability with Previous Releases">Interoperability with
+<h2>5. <a name="Interoperability with Previous Releases">Interoperability with
 Previous Releases</a></h2>
 <h3>Interoperability of Release 2.1 and 2.0</h3>
 <h4>Sharing projects between heterogeneous Eclipse 2.0 and 2.1</h4>
@@ -1629,6 +1609,10 @@ in the United States, other countries, or both.</p>
 United States, other countries, or both.</p>
 <p>Microsoft, Windows, Windows NT, and the Windows logo are trademarks of
 Microsoft Corporation in the United States, other countries, or both.</p>
+<p>Apple and Mac OS are trademarks of Apple Computer, Inc., registered in the
+U.S. and other countries.</p>
+<p>QNX, Neutrino, and Photon are trademarks or registered trademarks of QNX
+Software Systems Ltd.</p>
 <p>Other company, product, and service names may be trademarks or service marks
 of others.</p>
 <p>&copy; Copyright 2003 IBM Corp. and others 2003</p>
