--- a/maps/org.eclipse.releng/readmes/readme_eclipse.html
+++ b/maps/org.eclipse.releng/readmes/readme_eclipse.html
@@ -1615,7 +1615,7 @@ U.S. and other countries.</p>
 Software Systems Ltd.</p>
 <p>Other company, product, and service names may be trademarks or service marks
 of others.</p>
-<p>&copy; Copyright 2003 IBM Corp. and others 2003</p>
+<p>(c) Copyright 2003 IBM Corp. and others 2003</p>
 
 </body>
 
