--- a/bundles/org.eclipse.jdt.doc.user/concepts/cbuildcp.htm
+++ b/bundles/org.eclipse.jdt.doc.user/concepts/cbuildcp.htm
@@ -30,7 +30,10 @@
      <a href="../tasks/tasks-108.htm">Building automatically</a><br>
      <a href="../tasks/tasks-109.htm">Building manually</a><br>
      <a href="../tasks/tasks-111.htm">Viewing and editing a project's build path</a><br>
-     <a href="../tasks/tasks-110.htm">Working with build paths</a></p>
+     <a href="../tasks/tasks-110.htm">Working with build paths</a><br>
+	 <a href="../tasks/tasks-221.htm">Creating a new source folder with exclusion filter</a><br>
+	 <a href="../tasks/tasks-222.htm">Creating a new source folder with specific output folder</a>
+    </p>
 
     <p><img src="../images/ngrelr.gif" alt="Related reference" border="0" height="27" width="159"><br>
      <a href="../reference/ref-15.htm">Classpath Variables preferences</a><br>
