Add 3 more CVS known problems

--- a/maps/org.eclipse.releng/readmes/readme_eclipse.html
+++ b/maps/org.eclipse.releng/readmes/readme_eclipse.html
@@ -1215,6 +1215,19 @@ Synchronize view</h4>
 folders, performing an <b>Add to Version Control</b> will remove the empty
 folders from the view but not add them to version control. The workaround is to
 add them in the <b>Navigator</b> view. (bug <a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=35527">35527</a>).</p>
+<h4>Synchronize CVS Projects improperly synchronizes working set (GTK only)</h4>
+<p>In GTK operating environment, if the option to synchronize a working set was previously selected in the Synchronize CVS Projects dialog but is no longer, the operation may
+still synchronize the working set if no options in the dialog are changed before OK is clicked. The workaround is to first click "Include working
+set resources shared with CVS" and then click "Include all projects shared with CVS" before clicking OK. (bug
+<a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=35671">35671</a>)</p>
+<h4>CVS Compare editor still dirty after user discards changes</h4>
+<p>In the CVS compare editor, if a local file is modified, the editor will show a dirty indicator. If the user then chooses to open anther
+file in the editor, a prompt will ask whether the changes are to be kept. If the user chooses to discard the changes, they will be discarded but the dirty indicator is not cleared. (bug
+<a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=35647">35647</a>)</p>
+<h4>CSV Share Project fails for new repository and existing project</h4>
+<p>When using the CVS Share Project wizard to share a project, if the user enters a new repository location and the project being shared already exists in that repository, the operation will fail. The workaround is to rerun the
+<b> Share Project</b> operation which should succeed since the repository location now exists. (bug
+<a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=26171">26171</a>)</p>
 <h3>3.1.8 <a name="I-Platform - Install/Update">Platform - Install/Update</a></h3>
 <h4>Update manager claims that a cycle has been detected in a multiple path case</h4>
 <p>When a feature includes other features, it is an error to have multiple paths
