--- a/bundles/org.eclipse.platform.doc.isv/guide/wrkAdv_workingsets.htm
+++ b/bundles/org.eclipse.platform.doc.isv/guide/wrkAdv_workingsets.htm
@@ -36,11 +36,11 @@ API.</p>
 <p><b><a href="../reference/api/org/eclipse/ui/IWorkingSetManager.html">IWorkingSetManager</a>
 </b>allows you to<b> </b>manipulate and create working sets:</p>
 <ul>
-  <li><b>createWorkingSetSelectionDialog</b> - opens a working set dialog that
-    shows the user the current working sets and answers the selected working
-    sets</li>
-  <li><b>createWorkingSetEditWizard</b> - opens a working set edit wizard for
-    editing the specified working set</li>
+  <li><b>createWorkingSetSelectionDialog</b> - returns a working set dialog that shows the user the current working
+  sets. You can get the selected working sets from the dialog once it is
+  closed.</li>
+  <li><b>createWorkingSetEditWizard</b> - returns a working set edit wizard for editing the specified working
+  set</li>
   <li><b>getWorkingSets()</b> - returns a list of all defined working sets</li>
   <li><b>getWorkingSet(String name) </b>- returns a working set specified by
     name</li>
@@ -66,13 +66,13 @@ Working set types are shown when the user decides to add a working set.</p>
 <p>&nbsp;</p>
 
 
-<p>When you define your own type of working set, you can use <b><a href="../reference/api/org/eclipse/ui/IWorkingSet.html">IWorkingSet</a>.getId</b>
-protocol to ensure that the working set matches the type that you have
-defined.&nbsp; Any working sets that you create programmatically must have their
-id set to the id of the working set extension page that created it.&nbsp; This
-id is used to ensure that the proper working set edit page is launched when the
-user edits the working set.&nbsp; A null id indicates that the working set
-should use the default resource working set type.</p>
+<p>When you define your own type of working set, you can use <b><a href="../reference/api/org/eclipse/ui/IWorkingSet.html">IWorkingSet</a>.getId</b> protocol to ensure that the working set matches the type that you have
+defined.&nbsp; Any working sets that you create programmatically must have
+their id set to the id of a working set page that can display the working
+set elements.&nbsp; This id is used to ensure that the proper working set
+edit page is launched when the user edits the working set.&nbsp; A null
+id indicates that the working set should use the default resource working
+set type.</p>
 
 
 <p>See the
