Working set menu items

--- a/bundles/org.eclipse.platform.doc.user/concepts/cnav.htm
+++ b/bundles/org.eclipse.platform.doc.user/concepts/cnav.htm
@@ -49,7 +49,7 @@ current highest level resource.</dd>
   Navigator selection to the resource being edited.</dd>
   <dt>Menu</dt>
   <dd>Provides menu items that allow you to sort or filter the contents of the
-    Navigator view</dd>
+  Navigator view as well as select a working set.</dd>
 </dl>
 <h2>
 Icons</h2>
