--- a/bundles/org.eclipse.platform.doc.user/concepts/cnav.htm
+++ b/bundles/org.eclipse.platform.doc.user/concepts/cnav.htm
@@ -100,7 +100,9 @@ Icons</h2>
 <a href="../tasks/tasks-3e.htm">Moving and docking views</a><br>
 <a href="../tasks/tasks-9b.htm">Creating fast views</a>
 </p>
-
+<P><IMG border="0" src="../images/ngrelr.gif" alt="Related reference" width="159" height="27"><br>
+<a href="../reference/ref-27.htm">Navigator view</a>
+</P>
 <p>&nbsp;<br>
 <a href="../hglegal2003.htm"><img src="../images/ngibmcpy2003.gif" alt="Copyright IBM Corporation and others 2000, 2003" border="0" width="324" height="14"></a>
 </p>
